--- a/misc/folder/other/toki-pona/1/index.html
+++ b/misc/folder/other/toki-pona/1/index.html
@@ -13,9 +13,9 @@
             .phrase .latin .s, .phrase .latin .v, .phrase .latin .o{
                 text-decoration:none; border: solid 1px; border-radius: 4px;
                 padding: 0 8px}
-            .phrase .latin .s{background-color: #ff256d10}
-            .phrase .latin .v{background-color: #ffbb3910; border-style: double}
-            .phrase .latin .o{background-color: #01ca9210; border-style: dotted}
+            .phrase .latin .s{background-color: #ff256d10; border: solid 2px}
+            .phrase .latin .v{background-color: #ffbb3910; border: double 4px}
+            .phrase .latin .o{background-color: #01ca9210; border: dotted 2px}
             .image{display:flex; flex-direction: row-reverse; justify-content: space-between; 
                 align-items: flex-start}
             @media screen and (max-width: 550px){
