--- a/misc/folder/other/toki-pona/1/index.html
+++ b/misc/folder/other/toki-pona/1/index.html
@@ -11,11 +11,11 @@
             .v{text-decoration:underline double; color: var(--color); text-decoration-skip-ink: none;}
             .o{text-decoration:underline dashed; color: #01ca92; text-decoration-skip-ink: none;}
             .phrase .latin .s, .phrase .latin .v, .phrase .latin .o{
-                text-decoration:none; border: solid 1px; border-radius: 4px;
+               border: solid 1px; border-radius: 4px;
                 padding: 0 8px}
-            .phrase .latin .s{background-color: #ff256d10; border: solid 2px}
-            .phrase .latin .v{background-color: #ffbb3910; border: double 4px}
-            .phrase .latin .o{background-color: #01ca9210; border: dotted 2px}
+            .phrase .latin .s{background-color: #ff256d10}
+            .phrase .latin .v{background-color: #ffbb3910}
+            .phrase .latin .o{background-color: #01ca9210}
             .image{display:flex; flex-direction: row-reverse; justify-content: space-between; 
                 align-items: flex-start}
             @media screen and (max-width: 550px){
