--- a/misc/folder/other/toki-pona/1/index.html
+++ b/misc/folder/other/toki-pona/1/index.html
@@ -37,7 +37,7 @@
             <b class="v">verb</b> and the <b class="o">object</b> form the <b>predicate</b>.<br><br>
             Let's do an example in English: "a person ate a pear."</p>
             
-        <div class="image"><img src="moku.png"><div><p>A person is doing the eating, so they are the <b class="s">subject</b>;<br>
+        <div class="image"><img src="moku.png" alt="a person (subject) eating (verb) an apple (object)"><div><p>A person is doing the eating, so they are the <b class="s">subject</b>;<br>
             the action is eating so that's the <b class="v">verb</b>;<br>
             and the pear is what's being eaten, so it's the <b class="o">object</b>!</p>
         <div class="phrase">
@@ -65,7 +65,7 @@
             "A person ate a pear" loosely becomes:
         </p>
         
-        <div class="image"><img src="moku.png"><div><div class="phrase">
+        <div class="image"><img src="moku.png" alt="jan (subject) li moku (verb) e kili (object)"><div><div class="phrase">
             <div class="latin" style="color: var(--text)">
                 <b class="s">jan</b> li <b class="v">moku</b> e <b class="o">kili</b></div>
             <div class="sitelen-pona"><b class="s">jan</b> li <b class="v">moku</b> e <b class="o">kili</b></div>
@@ -78,7 +78,7 @@
             <div class="meaning">animal is fun/playing</div>
         </div></div></div><p>
             If the subject is <b class="s">mi or sina</b>, however, the particle is dropped:</p>
-        <div class="image"><img src="kute.png"><div class="phrase">
+        <div class="image"><img src="kute.png" alt="person (subject) listening (verb) to someone (object)"><div class="phrase">
         <div class="latin" style="color: var(--text)">
             <b class="s">sina</b> <b class="v">kute</b> e <b class="o">mi</b></div>
             <div class="sitelen-pona"><b class="s">sina</b> <b class="v">kute</b> e <b class="o">mi</b></div>
@@ -91,7 +91,7 @@
             <div class="sitelen-pona">o</div>
             <div class="meaning">[start of predicate | imperative/optative/vocative]</div>
         </div>
-        <div class="image"><img src="olin.png"><div><div class="phrase">
+        <div class="image"><img src="olin.png" alt="two people and a speech bubble ordering them to respect/love each other"><div><div class="phrase">
             <div class="latin" style="color: var(--text)">
                 <b class="s">jan</b> o <b class="v">olin</b></div>
             <div class="sitelen-pona"><b class="s">jan</b> o <b class="v">olin</b></div>
