--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@
     <body>
         <div class="main">
         <div style="border-right: solid 2px; padding-right: 16px">
-            <img src="walking.gif" alt="walking cube">
+            <img src="/website/walking.gif" alt="walking cube">
         </div>
         <div style="margin-top: -2px">
             this page doesn't exist<br>
