--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
     <div class="pages">
         <a href="bookmarks" class="bookmarks" title="(cool websites i've collected)">bookmarks</a><br>
         <a href="doodles" class="doodles" title="(stuff i've drawn)">doodles</a>
-        <a href="blender" class="normal" title="(stuff made in blender)">blender</a><br>
+        <a href="blender" class="normal" title="(stuff made in blender)">blender</a>
+        <a href="misc" class="misc" title="(ellaneous)">misc</a><br>
         <a href="buttons" class="buttons" title="(other folks' sites)">buttons</a>
-        <a href="misc" class="misc" title="(ellaneous)">misc</a>
         <a href="sitelog" class="sitelog" title="(what's changed)">sitelog</a>
     </div>
 
