--- a/blender/index.html
+++ b/blender/index.html
@@ -10,7 +10,13 @@
         <link href="blender.css" rel="stylesheet" type="text/css" media="all">
         <link rel="icon" type="image/x-icon" href="cube.gif">
         <title>stuff made in blender</title><style>
-            h3{font-size: 1.5rem; margin: 16px 0}
+            h3 a{font-size: 1.5rem; padding: 8px 16px; 
+                border: solid 2px var(--text); margin: 8px 4px; 
+                display: inline-block; text-decoration: none}
+            h3 a:hover {
+                background-color: var(--color);
+                color: var(--back);}
+            #render-series{display: flex}
         </style></head>
         <body><header>
             <h1>stuff made in blender</h1></header>
@@ -21,12 +27,11 @@
         Also these images (and this site) are licensed under <a href="/website/LICENSE.txt">GPLv3</a>.<br>
         Most of these series weren't made in one sitting, mostly over months of suddenly wanting to do that one thing again.<br>
         You can see how many images each page has next to the link, so if your internet isn't too good, maybe these won't be the fastest loading times...</p>
-
-        <ul>
-            <li><h3><a href="icossymetry">icossymetry</a> (40)</h3></li>
-            <li><h3><a href="cmyk">cmyk</a> (8)</h3></li>
-            <li><h3><a href="buttons">buttons</a> (7)</h3></li>
-        </ul>
+        <div id="render-series">
+            <h3><a href="icossymetry">icossymetry (40)</a></h3>
+            <h3><a href="cmyk">cmyk (8)</a></h3>
+            <h3><a href="buttons">buttons (7)</a></h3>
+        </div><br><br>
 
         <img src="shadow.png" alt="a handdrawn sphere casting a shadow" style="margin: 0; max-width: 100%; width: auto"> </div></body>
 </html>
