--- a/mante.html
+++ b/mante.html
@@ -29,7 +29,7 @@
                 I don't know why there are 2 🦗 at the start of the july 11 ones, but i can't fix it; probably some RTL thing<br><br>
                 (name changer) leaderboard:
                 <ul>
-                    <li><b>kulupu ko:</b> 57 changes</li>
+                    <li><b>kulupu ko:</b> 64 changes</li>
                     <li><b>The Planet Mercury:</b> 42 changes</li>
                     <li><b>the motan:</b> 40 changes</li>
                     <li><b>kala Asi:</b> 8 changes</li>
@@ -38,6 +38,13 @@
                 tan mute ante
         </details>
         <ul id="name list">
+            <li>august 20:<b> homosuck </b><span class="name">kulupu ko</span></li><br>
+            <li>august 20:<b> a toki pona community (let us back into kulupu-ante please) </b><span class="name">kulupu ko</span></li><br>
+            <li>august 20:<b> don't let aspen mod abuse 🙏 </b><span class="name">kulupu ko</span></li><br>
+            <li>august 19:<b> aspen's oceania </b><span class="name">kulupu ko</span></li><br>
+            <li>august 19:<b> ma owl house pi ijo owl house </b><span class="name">kulupu ko</span></li><br>
+            <li>august 16:<b> petting zoo where you pet aspen </b><span class="name">kulupu ko</span></li><br>
+            <li>august 18:<b> petting zoo with aspen inside </b><span class="name">kulupu ko</span></li><br>
             <li>august 16:<b> homestuck </b><span class="name">jan Seli</span></li><br>
             <li>august 16:<b> left libertarianism </b><span class="name">kulupu ko</span></li><br>
             <li>august 15:<b> teen daycare </b><span class="name">kulupu ko</span></li><br>
