--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 
             .normal:hover{background-color: #f0f0f010; border-color: #f0f0f0}
             .bookmarks:hover{background-color: #0d0542; color: #ffb135; border-color: #ffb135;}
+            .bookshelf:hover{background-color: #fbf3b2; color: #1e1e1e; border-color: #bba915;}
             .doodles:hover{background-color: #f0f0f0; color: #080808; border-color: #808080;}
             .sitelog:hover{background-color: #ffa90010; color: #ffa900; border-color: #ffa900;}
             .buttons:hover{background-color: #b8cadf; color: #001a40; border-color: #0b458e;}
@@ -89,7 +90,8 @@
     </div>
 
     <div class="pages">
-        <a href="bookmarks" class="bookmarks" title="(cool websites i've collected)">bookmarks</a><br>
+        <a href="bookmarks" class="bookmarks" title="(cool websites i've collected)">bookmarks</a>
+        <a href="bookshelf" class="bookshelf" title="(books i've read/am reading)">bookshelf</a><br>
         <a href="doodles" class="doodles" title="(stuff i've drawn)">doodles</a>
         <a href="blender" class="normal" title="(stuff made in blender)">blender</a>
         <a href="misc" class="misc" title="(ellaneous)">misc</a><br>
