fixed some go back buttons

--- a/misc/folder/other/difference.html
+++ b/misc/folder/other/difference.html
@@ -13,8 +13,9 @@
                 --color: #f0f0f0;
                 --shadow: #404040;}
         </style></head>
-    <body><div class="main"><h1>about difference</h1></div>
-    <div class="top"><a href="/website/misc/folder">back to folder</a></div>
+    <body><header>
+        <h1>about difference</h1></header>
+        <nav><a href="./">go back</a></nav>
     <div class="main">
         <p>
             Difference is an important thing. It's what keeps the world going round, it gives life spice, it makes existing fun.
