--- a/bookshelf.html
+++ b/bookshelf.html
@@ -17,7 +17,7 @@
         </style></head>
         <body><header>
             <h1>books books books</h1></header>
-            <nav><a href="../">go back</a></nav>
+            <nav><a href="./">go back</a></nav>
     <div class="main">
         <p>These are books I have read/am reading/want to read.<br>Since i'm working on anti-racism,
         most of them are about race and it's intersections, obviously. These with the 
