--- a/misc/index.html
+++ b/misc/index.html
@@ -18,7 +18,7 @@
         </style></head>
         <body><header>
             <h1>misc</h1></header>
-            <nav><a href="./">go back</a></nav>
+            <nav><a href="../">go back</a></nav>
         <div class="main">
         <p>After going down the stairs and into the basement, you wander into a green door.
             You step into a dark room, it's completely empty and somehow lit by a 
