--- a/mante.html
+++ b/mante.html
@@ -29,8 +29,8 @@
                 I don't know why there are 2 🦗 at the start of the july 11 ones, but i can't fix it; probably some RTL thing<br><br>
                 (name changer) leaderboard:
                 <ul>
-                    <li><b>kulupu ko:</b> 64 changes</li>
-                    <li><b>The Planet Mercury:</b> 42 changes</li>
+                    <li><b>kulupu ko:</b> 68 changes</li>
+                    <li><b>The Planet Mercury:</b> 43 changes</li>
                     <li><b>the motan:</b> 40 changes</li>
                     <li><b>kala Asi:</b> 8 changes</li>
                     <li><b>jan Seli:</b> 5 changes</li>
@@ -38,6 +38,11 @@
                 tan mute ante
         </details>
         <ul id="name list">
+            <li>august 26:<b> ma pedantry ante </b><span class="name">kulupu ko</span></li><br>
+            <li>august 26:<b> ko does not mean glue </b><span class="name">kulupu ko</span></li><br>
+            <li>august 23:<b> mante.org </b><span class="name">kulupu ko</span></li><br>
+            <li>august 23:<b> mante.gay </b><span class="name">kulupu ko</span></li><br>
+            <li>august 23:<b> mante.edu </b><span class="name">The Planet Mercury</span></li><br>
             <li>august 20:<b> homosuck </b><span class="name">kulupu ko</span></li><br>
             <li>august 20:<b> a toki pona community (let us back into kulupu-ante please) </b><span class="name">kulupu ko</span></li><br>
             <li>august 20:<b> don't let aspen mod abuse 🙏 </b><span class="name">kulupu ko</span></li><br>
