--- a/bookmarks.html
+++ b/bookmarks.html
@@ -12,6 +12,9 @@
             --text: #ffb135;
             --color: #c3c0ff;
             --shadow: #754801c4;}
+            details:hover, details[open]{background-color: #75480150;
+                border-color: var(--text)}
+            details[open] > summary{border-color: var(--text)}
             h2{font-size:1.75rem; margin-bottom: 8px}
         </style></head>
 
@@ -19,7 +22,7 @@
         <h1>a lot of bookmarks</h1></header>
         <nav><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="./">go back</a></nav>
     <div class="main">
-        <p>These are a bunch of bookmarks i've collected with raindrop.io, automatically updating! (<s>if i remember to add to them arrghh</s>)<br>
+        <p>These are a bunch of bookmarks i've collected with raindrop.io, automatically updating!<br>
         </p>
         <ul>
             <li><h2><a href="https://raindrop.io/cvni1981/anti-racism-resources-35349568">anti-racism resources!!!</a></h2><p>
