--- a/mante.html
+++ b/mante.html
@@ -29,16 +29,25 @@
                 I don't know why there are 2 🦗 at the start of the july 11 ones, but i can't fix it; probably some RTL thing<br><br>
                 (name changer) leaderboard:
                 <ul>
-                    <li><b>kulupu ko:</b> 75 changes</li>
-                    <li><b>The Planet Mercury:</b> 50 changes</li>
+                    <li><b>kulupu ko:</b> 77 changes</li>
+                    <li><b>The Planet Mercury:</b> 52 changes</li>
                     <li><b>the motan:</b> 42 changes</li>
-                    <li><b>kala Asi:</b> 8 changes</li>
+                    <li><b>kala Asi:</b> 9 changes</li>
                     <li><b>jan Seli:</b> 6 changes</li>
+                    <li><b>tabby:</b> 3 changes</li>
                     <li><b>mu Temi:</b> 1 change</li>
                 </ul><br>
                 tan mute ante
         </details>
         <ul id="name list">
+            <li>10/9:<b> bepis (toby fox hates it) </b><span class="name">kulupu ko</span></li><br>
+            <li>10/9:<b> autism, mercury, tabby and celes </b><span class="name">The Planet Mercury</span></li><br>
+            <li>10/9:<b> gabe.mp4 </b><span class="name">tabby</span></li><br>
+            <li>9/9:<b> <span style="cursor: help" title="double pi :despair:">ma pi toki pi nimi lili</span> </b><span class="name">The Planet Mercury</span></li><br>
+            <li>8/9:<b> mante slavlanger overtake </b><span class="name">tabby</span></li><br>
+            <li>8/9:<b> ma pi weirdly many slavlangers </b><span class="name">kala Asi</span></li><br>
+            <li>8/9:<b> tabbyland, puppet state of ma kitty </b><span class="name">kulupu ko</span></li><br>
+            <li>8/9:<b> tabbyland </b><span class="name">tabby</span></li><br>
             <li>7/9:<b> 6D6120616E746520706920696A6F20616E7465 </b><span class="name">The Planet Mercury</span></li><br>
             <li>7/9:<b> 6D6120616E74652070696A6F20616E7465 </b><span class="name">The Planet Mercury</span></li><br>
             <li>7/9:<b> atue of! !d atue ew </b><span class="name">jan Seli</span></li><br>
