--- a/mante.html
+++ b/mante.html
@@ -29,17 +29,28 @@
                 I don't know why there are 2 🦗 at the start of the july 11 ones, but i can't fix it; probably some RTL thing<br><br>
                 (name changer) leaderboard:
                 <ul>
-                    <li><b>kulupu ko:</b> 77 changes</li>
-                    <li><b>The Planet Mercury:</b> 52 changes</li>
+                    <li><b>kulupu ko:</b> 80 changes</li>
+                    <li><b>The Planet Mercury:</b> 55 changes</li>
                     <li><b>the motan:</b> 42 changes</li>
-                    <li><b>kala Asi:</b> 9 changes</li>
+                    <li><b>kala Asi:</b> 11 changes</li>
                     <li><b>jan Seli:</b> 6 changes</li>
-                    <li><b>tabby:</b> 3 changes</li>
+                    <li><b>tabby:</b> 6 changes</li>
                     <li><b>mu Temi:</b> 1 change</li>
                 </ul><br>
                 tan mute ante
         </details>
         <ul id="name list">
+            <li>16/9:<b> white people are racist </b><span class="name">kulupu ko</span></li><br>
+            <li>16/9:<b> friendly reminder that all white people have racist bias </b><span class="name">kulupu ko</span></li><br>
+            <li>16/9:<b> embellishment </b><span class="name">kala Asi</span></li><br>
+            <li>16/9:<b> oceania or something idk </b><span class="name">tabby</span></li><br>
+            <li>15/9:<b> happy undertale day </b><span class="name">The Planet Mercury</span></li><br>
+            <li>15/9:<b> some kind of server </b><span class="name">The Planet Mercury</span></li><br>
+            <li>15/9:<b> some mind of server </b><span class="name">The Planet Mercury</span></li><br>
+            <li>14/9:<b> ma ante pi ijo ante </b><span class="name">kulupu ko</span></li><br>
+            <li>12/9:<b> curly hair land </b><span class="name">kala Asi</span></li><br>
+            <li>12/9:<b> curly bracket land </b><span class="name">tabby</span></li><br>
+            <li>11/9:<b> parentheses land </b><span class="name">tabby</span></li><br>
             <li>10/9:<b> bepis (toby fox hates it) </b><span class="name">kulupu ko</span></li><br>
             <li>10/9:<b> autism, mercury, tabby and celes </b><span class="name">The Planet Mercury</span></li><br>
             <li>10/9:<b> gabe.mp4 </b><span class="name">tabby</span></li><br>
