--- a/mante/names.html
+++ b/mante/names.html
@@ -6,8 +6,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@450;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@900&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="style.css" rel="stylesheet" type="text/css" media="all">
-        <title>mante</title><style>
+        <link href="../style.css" rel="stylesheet" type="text/css" media="all">
+        <title>server names</title><style>
         body{--back: #080808;
         --text: #f0f0f0;
         --color: #5dcbfc;
@@ -29,7 +29,7 @@
                 I don't know why there are 2 🦗 at the start of the july 11 ones, but i can't fix it; probably some RTL thing<br><br>
                 (name changer) leaderboard:
                 <ul>
-                    <li><b>kulupu ko:</b> 80 changes</li>
+                    <li><b>kulupu ko:</b> 82 changes</li>
                     <li><b>The Planet Mercury:</b> 55 changes</li>
                     <li><b>the motan:</b> 42 changes</li>
                     <li><b>kala Asi:</b> 11 changes</li>
@@ -40,6 +40,8 @@
                 tan mute ante
         </details>
         <ul id="name list">
+            <li>18/9:<b> racism is bad </b><span class="name">kulupu ko</span></li><br>
+            <li>17/9:<b> white people are have racist bias </b><span class="name">kulupu ko</span></li><br>
             <li>16/9:<b> white people are racist </b><span class="name">kulupu ko</span></li><br>
             <li>16/9:<b> friendly reminder that all white people have racist bias </b><span class="name">kulupu ko</span></li><br>
             <li>16/9:<b> embellishment </b><span class="name">kala Asi</span></li><br>
