added kulupu ko button!

--- a/buttons/index.html
+++ b/buttons/index.html
@@ -36,6 +36,7 @@
         <br>And a button of our own is coming soon to fit the new new new [...] style</p>
         <h2>acquaintances</h2><div class="buttons">
         <a href=https://tabby-the-tabby.neocities.org class="button"><img src=https://tabby-the-tabby.neocities.org/assets/tabbutton.gif alt="tabby"></a> 
+        <a href="https://the-blob-system.neocities.org"><img src="https://the-blob-system.neocities.org/kulupu%20ko.png" alt="come to the wormliest place in the world, kulupu ko's website!"></a>
         <a href="https://motan.gay/" class="button" ><img src="https://motan.gay/images/button.png" alt="motan"></a> 
         <a href="https://chiitopia.neocities.org" class="button"><img src="https://chiitopia.neocities.org/images/balls.png" alt="chii"></a> 
         <a href="https://jansamosi.ichi.city/"  class="button"><img src="https://jansamosi.ichi.city/badg.png" alt="samosi"></a> 
