fixed kpwu link

--- a/buttons/index.html
+++ b/buttons/index.html
@@ -42,7 +42,7 @@
         <a href="https://jansamosi.ichi.city/"  class="button"><img src="https://jansamosi.ichi.city/badg.png" alt="samosi"></a> 
         <a href="https://temmiemew.neocities.org/" class="button"><img src="https://temmiemew.neocities.org/temmie-mew-button.png" alt="temmie mew"></a>
         <a class="button" href="https://jmibo.neocities.org/"><img src="https://jmibo.neocities.org/assets/button.png" alt="jmibo"></a> 
-        <a href="https://kpwu.xyz/" class="button"><img id="button_self" src="https://kpwu.xyz/images/kpwu_button.png" alt="kpwu"></a>
+        <a href="https://kpwu.observer/" class="button"><img id="button_self" src="https://kpwu.observer/images/kpwu_button.png" alt="kpwu"></a>
     </div><h2>other neat places</h2><div class="buttons">
         <a href="https://zenmai.neocities.org/" class="button" style="height:40px"><img src="zenmai.png" alt="zenmai"></a>
         <a href="https://worldendling.neocities.org/" class="button"><img width="88" height="31" src="worldendling.gif" alt="worldendling"></a>
