added ibispaint doodles

--- a/doodles/index.html
+++ b/doodles/index.html
@@ -25,10 +25,11 @@
     <div class="main">
         <p>Things i've drawn on numbered notebooks. If you want to ask the meaning of any, do so through discord.
             " ; " separates drawing blocks, if there are multiple doodles within, they are separated by " , ", "{ }"
-            indicates meaning, " [ ] " indicates speech.
+            indicates meaning, " [ ] " indicates speech. drawings are in reverse chronological order, top to bottom
         </p>
         <div id="notebooks">
             <h2><a href="15" style="--color: #ccb184"># 15</a></h2>
+            <h2><a href="ibispaint" style="--color: gray">ibisPaint</a></h2>
         </div>
     </div></body>
 </html>
