--- a/buttons/index.html
+++ b/buttons/index.html
@@ -27,6 +27,15 @@
         p{margin-top: 8px}
         .after{background: linear-gradient(90deg, var(--text) 0%, var(--shadow) 100%);
             flex: 1; margin-left: 8px; height: 1px} 
+
+        #mante{border: solid 1px var(--color);
+            border-radius: 8px;margin: 8px 0;
+            box-shadow: 2px 2px var(--shadow);
+            padding: 8px}
+        #mante table{width: 100%}
+        .webring-prev, .webring-next{width:min-content}
+        .webring-info{text-align: center;}
+
         </style></head>
         <body><header>
             <h1>buttons</h1></header>
