--- a/buttons/index.html
+++ b/buttons/index.html
@@ -33,7 +33,8 @@
             box-shadow: 2px 2px var(--shadow);
             padding: 8px}
         #mante table{width: 100%}
-        .webring-prev, .webring-next{width:min-content}
+        .webring-prev, .webring-next{width:100px}
+        .webring-next{text-align: right}
         .webring-info{text-align: center;}
 
         </style></head>
