--- a/buttons/index.html
+++ b/buttons/index.html
@@ -31,7 +31,11 @@
         #mante{border: solid 1px var(--color);
             border-radius: 8px;margin: 8px 0;
             box-shadow: 2px 2px var(--shadow);
-            padding: 8px}
+            padding: 8px; color: #003621; 
+            background-color: #e0ffe8;
+            --shadow: #63b695;}
+        #mante a{color: #003621;text-decoration-color: #00824f}
+        #mante a{color: #00824f}
         #mante table{width: 100%}
         .webring-prev, .webring-next{width:100px}
         .webring-next{text-align: right}
