--- a/buttons/index.html
+++ b/buttons/index.html
@@ -35,7 +35,7 @@
             background-color: #e0ffe8;
             --shadow: #63b695;}
         #mante a{color: #003621;text-decoration-color: #00824f}
-        #mante a{color: #00824f}
+        #mante a:hover{color: #00824f}
         #mante table{width: 100%}
         .webring-prev, .webring-next{width:100px}
         .webring-next{text-align: right}
