--- a/buttons/index.html
+++ b/buttons/index.html
@@ -28,12 +28,11 @@
         .after{background: linear-gradient(90deg, var(--text) 0%, var(--shadow) 100%);
             flex: 1; margin-left: 8px; height: 1px} 
 
-        #mante{border: solid 1px var(--color);
+        #mante{border: solid 1px #003621;
             border-radius: 8px;margin: 8px 0;
-            box-shadow: 2px 2px var(--shadow);
+            box-shadow: 2px 2px #63b695;
             padding: 8px; color: #003621; 
-            background-color: #e0ffe8;
-            --shadow: #63b695;}
+            background-color: #e0ffe8;}
         #mante a{color: #003621;text-decoration-color: #00824f}
         #mante a:hover{color: #00824f}
         #mante table{width: 100%}
