--- a/buttons/index.html
+++ b/buttons/index.html
@@ -72,5 +72,5 @@
         <script type="text/javascript" src="https://the-blob-system.neocities.org/mante_webring/onionring-variables.js"></script>
         <script type="text/javascript" src="https://the-blob-system.neocities.org/mante_webring/onionring-widget.js"></script>
         </div>
-    <iframe name="johnvertisement" src="https://john.citrons.xyz/embed?ref=example.com" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;"></iframe></div></body>
+</div></body>
 </html>
