--- a/buttons/index.html
+++ b/buttons/index.html
@@ -30,9 +30,10 @@
 
         #mante{border: solid 1px #003621;
             border-radius: 8px;margin: 8px 0;
-            box-shadow: 2px 2px #63b695;
             padding: 8px; color: #003621; 
-            background-color: #e0ffe8;}
+            background-color: #e0ffe8;
+            transition: box-shadow .5s cubic-bezier(.08,.82,.17,1)}
+        #mante:hover{box-shadow: 2px 2px #63b695;}
         #mante a{color: #003621;text-decoration-color: #00824f}
         #mante a:hover{color: #00824f}
         #mante table{width: 100%}
