--- a/buttons/index.html
+++ b/buttons/index.html
@@ -34,8 +34,8 @@
             background-color: #e0ffe8;
             transition: box-shadow .5s cubic-bezier(.08,.82,.17,1)}
         #mante:hover{box-shadow: 4px 4px #63b695;}
-        #mante a{color: #003621;text-decoration-color: #00824f}
-        #mante a:hover{color: #00824f}
+        #mante a{color: #003621;text-decoration-color: #00c917}
+        #mante a:hover{color: #00c917}
         #mante table{width: 100%}
         .webring-prev, .webring-next{width:100px}
         .webring-next{text-align: right}
