added back our button

--- a/buttons/index.html
+++ b/buttons/index.html
@@ -11,6 +11,8 @@
             --text: #001a40;
             --color: #0b458e;
             --shadow: #6690de;
+            --details: #0b458e10;
+            --border: #001a40;
         font-family: 'Lora', serif}
         #entry{margin-bottom: 40px;}
         h1, h2{font-family: 'Lora', serif; font-style: italic;}
@@ -41,13 +43,23 @@
         .webring-next{text-align: right}
         .webring-info{text-align: center;}
 
+        details{margin: 16px 0}
+        textarea{border: solid #001a43 1px;
+            border-radius: 7px;
+            background-color: #faf9ff;
+            color: #001a43;}
+
         </style></head>
         <body><header>
             <h1>buttons</h1></header>
             <nav><a href="../">go back</a></nav>
     <div class="main">
         <p>This is the place where we put buttons to other folks' sites, some friends of mine and others ones i found on status.cafe!
-        <br>And a button of our own is coming soon to fit the new new new [...] style</p>
+        <br>And here's my button if you want to add it to your site:</p>
+        <details><summary>my buttons</summary>
+            <img src="88x31.gif" alt="nowhere in particular"><br>
+            <textarea>&lt;a href="https://cvni1981.github.io/website"&gt;&lt;img src="https://cvni1981.github.io/website/buttons/88x31.gif" alt="nowhere in particular"&gt;&lt;/a&gt;</textarea></a>
+        </details>
         <h2>acquaintances</h2><div class="buttons">
         <a href=https://tabby-the-tabby.neocities.org class="button"><img src=https://tabby-the-tabby.neocities.org/assets/tabbutton.gif alt="tabby"></a> 
         <a href="https://the-blob-system.neocities.org" class="button"><img src="https://the-blob-system.neocities.org/kulupu%20ko.png" alt="come to the wormliest place in the world, kulupu ko's website!"></a>
