--- a/buttons/index.html
+++ b/buttons/index.html
@@ -48,6 +48,7 @@
             border-radius: 7px;
             background-color: #faf9ff;
             color: #001a43;}
+        summary{font-weight: bold; font-style: italic;}
 
         </style></head>
         <body><header>
