--- a/buttons/index.html
+++ b/buttons/index.html
@@ -30,7 +30,7 @@
         .after{background: linear-gradient(90deg, var(--text) 0%, var(--shadow) 100%);
             flex: 1; margin-left: 8px; height: 1px} 
 
-
+        #mante{box-shadow: none}
 
         details{margin: 16px 0}
         textarea{border: solid #001a43 1px;
