--- a/nasin-ike-pi-poki-kule.html
+++ b/nasin-ike-pi-poki-kule.html
@@ -560,7 +560,7 @@
                 <div class="en">
                     also, please know this:<br>
                     what i've said isn't everything<br>
-                    i'm wite, so i don't know everything<br>
+                    i'm white, so i don't know everything<br>
                     so me and you must learn!<br>
                     listen to black people because<br>
                     they know their lives<br>
