--- a/nasin-ike-pi-poki-kule.html
+++ b/nasin-ike-pi-poki-kule.html
@@ -6,12 +6,11 @@
         <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="style.css" rel="stylesheet" type="text/css" media="all">
-        <link rel="icon" type="image/x-icon" href="/website/blender/cube.gif">
         <title>words/nasin ike pi poki kule (racism)</title><style>
-            body, h1{--back: #f0f0f0;
-                    --text: #080808;
-                    --color: #808080;
-                    --shadow: #808080;
+            body, h1{--back: #ffdbca;
+                --text: #2f201a;
+                --color: #ff5200;
+                --shadow: #ff520080;
                 font-family: 'Lora', serif}
             body{font-size: 1.25rem}
             .block{display:grid; grid-template-columns: 50% calc(50% - 16px); gap: 16px;
