--- a/mante/names.html
+++ b/mante/names.html
@@ -29,17 +29,24 @@
                 I don't know why there are 2 🦗 at the start of the july 11 ones, but i can't fix it; probably some RTL thing<br><br>
                 (name changer) leaderboard:
                 <ul>
-                    <li><b>kulupu ko:</b> 82 changes</li>
+                    <li><b>kulupu ko:</b> 87 changes</li>
                     <li><b>The Planet Mercury:</b> 55 changes</li>
                     <li><b>the motan:</b> 42 changes</li>
                     <li><b>kala Asi:</b> 11 changes</li>
                     <li><b>jan Seli:</b> 6 changes</li>
                     <li><b>tabby:</b> 6 changes</li>
                     <li><b>mu Temi:</b> 1 change</li>
+                    <li><b>mute ante:</b> 1 change</li>
                 </ul><br>
                 tan mute ante
         </details>
         <ul id="name list">
+            <li>24/9:<b> help me help please god help me aspen did it again PLEASE GOD PLEASE WHY </b><span class="name">kulupu ko</span></li><br>
+            <li>24/9:<b> aur naur </b><span class="name">kulupu ko</span></li><br>
+            <li>24/9:<b> bad = bad </b><span class="name">mute ante</span></li><br>
+            <li>23/9:<b> ma ante pi ijo ante </b><span class="name">kulupu ko</span></li><br>
+            <li>23/9:<b> bad = bad </b><span class="name">kulupu ko</span></li><br>
+            <li>23/9:<b> bad things like racism are bad </b><span class="name">kulupu ko</span></li><br>
             <li>18/9:<b> racism is bad </b><span class="name">kulupu ko</span></li><br>
             <li>17/9:<b> white people are have racist bias </b><span class="name">kulupu ko</span></li><br>
             <li>16/9:<b> white people are racist </b><span class="name">kulupu ko</span></li><br>
