--- a/mante/names.html
+++ b/mante/names.html
@@ -29,18 +29,52 @@
                 I don't know why there are 2 🦗 at the start of the july 11 ones, but i can't fix it; probably some RTL thing<br><br>
                 (name changer) leaderboard:
                 <ul>
-                    <li><b>kulupu ko:</b> 87 changes</li>
+                    <li><b>kulupu ko:</b> 103 changes</li>
                     <li><b>The Planet Mercury:</b> 55 changes</li>
-                    <li><b>the motan:</b> 42 changes</li>
-                    <li><b>kala Asi:</b> 11 changes</li>
-                    <li><b>jan Seli:</b> 6 changes</li>
-                    <li><b>tabby:</b> 6 changes</li>
+                    <li><b>the motan:</b> 45 changes</li>
+                    <li><b>kala Asi:</b> 16 changes</li>
+                    <li><b>jan Seli:</b> 12 changes</li>
+                    <li><b>tabby:</b> 9 changes</li>
+                    <li><b>mute ante:</b> 2 changes</li>
                     <li><b>mu Temi:</b> 1 change</li>
-                    <li><b>mute ante:</b> 1 change</li>
                 </ul><br>
                 tan mute ante
         </details>
         <ul id="name list">
+            <li>12/10:<b> dyooy </b><span class="name">jan Seli</span></li><br>
+            <li>10/10:<b> nothing aloud </b><span class="name">kala Asi</span></li><br>
+            <li>9/10:<b> nothing allowed </b><span class="name">kulupu ko</span></li><br>
+            <li>9/10:<b> rember </b><span class="name">kala Asi</span></li><br>
+            <li>8/10:<b> remember </b><span class="name">kulupu ko</span></li><br>
+            <li>8/10:<b> red alert: aspen sleep deprived </b><span class="name">kulupu ko</span></li><br>
+            <li>7/10:<b> beutiy ehs inh thee aye ov thee beeholder </b><span class="name">kulupu ko</span></li><br>
+            <li>7/10:<b> mom mercury's being mercury again </b><span class="name">kulupu ko</span></li><br>
+            <li>7/10:<b> Linux Mint with Cinnamon </b><span class="name">kulupu ko</span></li><br>
+            <li>6/10:<b> bootlook </b><span class="name">the motan</span></li><br>
+            <li>6/10:<b> shoegaze </b><span class="name">kulupu ko</span></li><br>
+            <li>6/10:<b> icterine warbler </b><span class="name">kala Asi</span></li><br>
+            <li>5/10:<b> i will not make this server name </b><span class="name">kulupu ko</span></li><br>
+            <li>5/10:<b> make this server name: </b><span class="name">jan Seli</span></li><br>
+            <li>4/10:<b> life is society, and i am autism </b><span class="name">kulupu ko</span></li><br>
+            <li>4/10:<b> life is spoon and i am forl </b><span class="name">the motan</span></li><br>
+            <li>4/10:<b> spoon </b><span class="name">kulupu ko</span></li><br>
+            <li>3/10:<b> life is drink, i am food. i will never be on a plate with you </b><span class="name">kulupu ko</span></li><br>
+            <li>3/10:<b> life is soup, i am fork </b><span class="name">jan Seli</span></li><br>
+            <li>3/10:<b> make this server name </b><span class="name">kala Asi</span></li><br>
+            <li>3/10:<b> allegory for failure at life </b><span class="name">kulupu ko</span></li><br>
+            <li>3/10:<b> life is soup, i am fork </b><span class="name">jan Seli</span></li><br>
+            <li>3/10:<b> fuck forks. just use chopsticks or spoons. stop stabbing your food </b><span class="name">kulupu ko</span></li><br>
+            <li>3/10:<b> life is soup, i am fork </b><span class="name">jan Seli</span></li><br>
+            <li>2/10:<b> 👁️ i'm watching you </b><span class="name">kulupu ko</span></li><br>
+            <li>2/10:<b> piece of chicken pi seemingly ranch </b><span class="name">the motan</span></li><br>
+            <li>2/10:<b> soup is life, soup is love </b><span class="name">kala Asi</span></li><br>
+            <li>2/10:<b> life is soup, i am toothpick </b><span class="name">tabby</span></li><br>
+            <li>1/10:<b> life is soup, i am fork </b><span class="name">jan Seli</span></li><br>
+            <li>29/9:<b> i am drink and you are food </b><span class="name">kulupu ko</span></li><br>
+            <li>29/9:<b> the tism server </b><span class="name">tabby</span></li><br>
+            <li>28/9:<b> ma explosion pi ijo explosion </b><span class="name">tabby</span></li><br>
+            <li>26/9:<b> ma ante pi ijo ante </b><span class="name">kulupu ko</span></li><br>
+            <li>26/9:<b> ufklärxeila amarxeiřžra'a </b><span class="name">mute ante</span></li><br>
             <li>24/9:<b> help me help please god help me aspen did it again PLEASE GOD PLEASE WHY </b><span class="name">kulupu ko</span></li><br>
             <li>24/9:<b> aur naur </b><span class="name">kulupu ko</span></li><br>
             <li>24/9:<b> bad = bad </b><span class="name">mute ante</span></li><br>
