--- a/mante/names.html
+++ b/mante/names.html
@@ -29,7 +29,7 @@
                 I don't know why there are 2 🦗 at the start of the july 11 ones, but i can't fix it; probably some RTL thing<br><br>
                 (name changer) leaderboard:
                 <ul>
-                    <li><b>kulupu ko:</b> 104 changes</li>
+                    <li><b>kulupu ko:</b> 105 changes</li>
                     <li><b>The Planet Mercury:</b> 55 changes</li>
                     <li><b>the motan:</b> 45 changes</li>
                     <li><b>kala Asi:</b> 16 changes</li>
@@ -41,6 +41,7 @@
                 tan mute ante
         </details>
         <ul id="name list">
+            <li>12/10:<b> takota uses gentoo (and has to compile everything) </b><span class="name">kulupu ko</span></li><br>
             <li>12/10:<b> aspen uses arch btw </b><span class="name">kulupu ko</span></li><br>
             <li>12/10:<b> dyooy </b><span class="name">jan Seli</span></li><br>
             <li>10/10:<b> nothing aloud </b><span class="name">kala Asi</span></li><br>
