--- a/mante.html
+++ b/mante.html
@@ -29,18 +29,42 @@
                 I don't know why there are 2 🦗 at the start of the july 11 ones, but i can't fix it; probably some RTL thing<br><br>
                 (name changer) leaderboard:
                 <ul>
-                    <li><b>kulupu ko:</b> 105 changes</li>
+                    <li><b>kulupu ko:</b> 122 changes</li>
                     <li><b>The Planet Mercury:</b> 55 changes</li>
-                    <li><b>the motan:</b> 45 changes</li>
+                    <li><b>the motan:</b> 49 changes</li>
                     <li><b>kala Asi:</b> 16 changes</li>
-                    <li><b>jan Seli:</b> 12 changes</li>
-                    <li><b>tabby:</b> 9 changes</li>
+                    <li><b>jan Seli:</b> 14 changes</li>
+                    <li><b>tabby:</b> 10 changes</li>
                     <li><b>mute ante:</b> 2 changes</li>
                     <li><b>mu Temi:</b> 1 change</li>
                 </ul><br>
                 tan mute ante
         </details>
         <ul id="name list">
+            <li>9/11:<b> white people come from Europe usually </b><span class="name">kulupu ko</span></li><br>
+            <li>5/11:<b> aspen fanclub </b><span class="name">kulupu ko</span></li><br>
+            <li>3/11:<b> happy happy birthday </b><span class="name">kulupu ko</span></li><br>
+            <li>31/10:<b> spooky scary skeletons </b><span class="name">jan Seli</span></li><br>
+            <li>22/10:<b> Mante D&D (Crazy) [GONE WRONG] </b><span class="name">kulupu ko</span></li><br>
+            <li>22/10:<b> now stop kissing </b><span class="name">the motan</span></li><br>
+            <li>22/10:<b> now kiss... </b><span class="name">kulupu ko</span></li><br>
+            <li>21/10:<b> now kiss.... </b><span class="name">the motan</span></li><br>
+            <li>21/10:<b> rename the server to zaminamina eh eh waka waka eh eh </b><span class="name">kulupu ko</span></li><br>
+            <li>21/10:<b> ijo ijo </b><span class="name">kulupu ko</span></li><br>
+            <li>21/10:<b> ma pi ante </b><span class="name">jan Seli</span></li><br>
+            <li>18/10:<b> ma ante pi ijo ante </b><span class="name">kulupu ko</span></li><br>
+            <li>16/10:<b> dungeons and dragons </b><span class="name">kulupu ko</span></li><br>
+            <li>15/10:<b> pomni </b><span class="name">kulupu ko</span></li><br>
+            <li>15/10:<b> skibidi toilet or creeper </b><span class="name">the motan</span></li><br>
+            <li>15/10:<b> linux </b><span class="name">kulupu ko</span></li><br>
+            <li>13/10:<b> arch tomgirl hangout </b><span class="name">kulupu ko</span></li><br>
+            <li>13/10:<b> GNU stands for GNU's not Unix! </b><span class="name">kulupu ko</span></li><br>
+            <li>13/10:<b> BUH </b><span class="name">kulupu ko</span></li><br>
+            <li>13/10:<b> q anon </b><span class="name">kulupu ko</span></li><br>
+            <li>13/10:<b> let the bodies hit the floor </b><span class="name">tabby</span></li><br>
+            <li>13/10:<b> nothing wrong with me </b><span class="name">the motan</span></li><br>
+            <li>12/10:<b> gentoo more like sarcasmwon </b><span class="name">kulupu ko</span></li><br>
+            <li>12/10:<b> artix </b><span class="name">kulupu ko</span></li><br>
             <li>12/10:<b> takota uses gentoo (and has to compile everything) </b><span class="name">kulupu ko</span></li><br>
             <li>12/10:<b> aspen uses arch btw </b><span class="name">kulupu ko</span></li><br>
             <li>12/10:<b> dyooy </b><span class="name">jan Seli</span></li><br>
