--- a/mante.html
+++ b/mante.html
@@ -6,7 +6,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@450;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@900&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="../style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="style.css" rel="stylesheet" type="text/css" media="all">
         <title>server names</title><style>
         body{--back: #080808;
         --text: #f0f0f0;
