--- a/mante.html
+++ b/mante.html
@@ -33,7 +33,7 @@
                     <li><b>The Planet Mercury:</b> 55 changes</li>
                     <li><b>the motan:</b> 49 changes</li>
                     <li><b>kala Asi:</b> 16 changes</li>
-                    <li><b>jan Seli:</b> 14 changes</li>
+                    <li><b>jan Seli:</b> 15 changes</li>
                     <li><b>tabby:</b> 10 changes</li>
                     <li><b>mute ante:</b> 2 changes</li>
                     <li><b>mu Temi:</b> 1 change</li>
@@ -41,6 +41,7 @@
                 tan mute ante
         </details>
         <ul id="name list">
+            <li>10/11:<b> マ・アンテ・ピ・イヨ・アンテ </b><span class="name">kulupu ko</span></li><br>
             <li>9/11:<b> white people come from Europe usually </b><span class="name">kulupu ko</span></li><br>
             <li>5/11:<b> aspen fanclub </b><span class="name">kulupu ko</span></li><br>
             <li>3/11:<b> happy happy birthday </b><span class="name">kulupu ko</span></li><br>
