--- a/mante.html
+++ b/mante.html
@@ -29,7 +29,7 @@
                 I don't know why there are 2 🦗 at the start of the july 11 ones, but i can't fix it; probably some RTL thing<br><br>
                 (name changer) leaderboard:
                 <ul>
-                    <li><b>kulupu ko:</b> 122 changes</li>
+                    <li><b>kulupu ko:</b> 123 changes</li>
                     <li><b>The Planet Mercury:</b> 55 changes</li>
                     <li><b>the motan:</b> 49 changes</li>
                     <li><b>kala Asi:</b> 16 changes</li>
@@ -41,6 +41,7 @@
                 tan mute ante
         </details>
         <ul id="name list">
+            <li>11/11:<b> toki pona </b><span class="name">kulupu ko</span></li><br>
             <li>10/11:<b> マ・アンテ・ピ・イヨ・アンテ </b><span class="name">kulupu ko</span></li><br>
             <li>9/11:<b> white people come from Europe usually </b><span class="name">kulupu ko</span></li><br>
             <li>5/11:<b> aspen fanclub </b><span class="name">kulupu ko</span></li><br>
