--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             body{--back: #080808;
                 --text: #f0f0f0;
                 --color: #f0f0f0;
-                --shadow: #202020;
+                --shadow: #404040;
                 --border: #404040;
                 --details: #f0f0f010;
                 display: flex; font-size: 4rem}
@@ -17,8 +17,8 @@
                 width: fit-content; 
                 padding: .5rem 1.5rem 1rem 1rem; 
                 margin: auto; transition: all .5s cubic-bezier(.08,.82,.17,1)}
-            .button:hover{background-color: var(--details); border-color: var(--color); 
-            box-shadow: var(--shadow) .5rem .5rem;}
+            .button:hover{background-color: #f0f0f010; border-color: #f0f0f0; 
+            box-shadow: #202020 .5rem .5rem;}
             @media only screen and (max-width: 450px) {
                 .button{display: inline; font-size: 14vw; 
                     border-width: 1.5vw; padding: 2vw 5vw 5vw}
