--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="/website/style.css" rel="stylesheet" type="text/css" media="all">
         <title>nowhere in particular</title><style>
             body{--back: #080808;
                 --text: #f0f0f0;
@@ -29,9 +29,9 @@
     <body style="height:100vh; display: flex">
         <div class="center">
             <p>this page doesn't exist</p>
-            <img src="images/walking.gif">
+            <img src="/website/images/walking.gif">
             <p>eternally under construction</p><br>
-            <a href="/home.html">back home</a>
+            <a href="/website/home.html">back home</a>
         </div>
     </body>
 </html>
