--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/style.css" rel="stylesheet" type="text/css" media="all">
-        <title>nowhere in particular</title><style>
+        <title>404</title><style>
             body{--back: #080808;
                 --text: #f0f0f0;
                 --color: #ef7c23;
@@ -30,7 +30,7 @@
         <div class="center">
             <p>this page doesn't exist</p>
             <img src="/website/images/walking.gif">
-            <p>eternally under construction</p><br>
+            <p>how did you get here</p><br>
             <a href="/website/home.html">back home</a>
         </div>
     </body>
