added back arrow

--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
                 align-items: center;}
 
             a{outline: 2px solid var(--border); text-decoration: none;
-            padding: 4px 8px;}
+            padding: 4px 8px 8px;}
 
             a:hover{background-color: var(--color); color: var(--back);
             outline-color: var(--back); outline-offset: -4px;}
@@ -31,7 +31,7 @@
             <p>this page doesn't exist</p>
             <img src="/website/images/walking.gif">
             <p>how did you get here</p><br>
-            <a href="/website/home.html">back home</a>
+            <a href="/website/home.html">↩ back home</a>
         </div>
     </body>
 </html>
